--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "keywords": [],
   "author": {
-    "name": "Marcus Gonçalves",
-    "email": "marcusgoncalves067@gmail.com"
+    "name": "Leonardo Candido",
+    "email": "leonardodemarco@gmail.com"
   },
   "license": "MIT",
   "type": "module",
