--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "config": "node ./setup.js",
     "dev": "tsx watch src/index.ts",
-    "build": "tsup src",
+    "build": "tsup src --out-dir dist"
     "start": "npm run build && npx pm2 start dist/index.cjs --name zap-gpt --no-daemon",
     "stop": "npx pm2 delete zap-gpt"
   },
