--- a/package.json
+++ b/package.json
@@ -1,18 +1,18 @@
 {
-  "name": "smith-gpt",
+  "name": "zap-gpt",
   "version": "1.0.0",
   "description": "",
   "main": "src/index.ts",
   "scripts": {
     "config": "node ./setup.js",
     "dev": "tsx watch src/index.ts",
-    "build": "tsup src --out-dir dist"
+    "build": "tsup src --out-dir dist",
     "start": "npm run build && npx pm2 start dist/index.cjs --name zap-gpt --no-daemon",
     "stop": "npx pm2 delete zap-gpt"
   },
   "keywords": [],
   "author": {
-    "name": "Leonardo Candido",
+    "name": "Leo Candido",
     "email": "leonardodemarco@gmail.com"
   },
   "license": "MIT",
@@ -36,7 +36,7 @@
     "eslint-config-prettier": "^9.1.0",
     "eslint-config-standard-with-typescript": "^43.0.1",
     "eslint-plugin-import": "^2.25.2",
-    "eslint-plugin-n": "^15.0.0 || ^16.0.0 ",
+    "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
     "pm2": "^5.3.1",
