--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-prettier": "^5.1.3",
     "eslint-plugin-promise": "^6.0.0",
+    "eslint-visitor-keys": "1.3.0",
     "pm2": "^5.3.1",
     "prettier": "^3.2.4",
     "tsup": "^8.0.1",
